--- a/src/test/resources/objectrepository/OR.properties
+++ b/src/test/resources/objectrepository/OR.properties
@@ -1,6 +1,7 @@
-dropdown = //button[@class = 'cDropdown-toggle dropdown-toggle'and @type = 'button']
+sizedropdown = //button[@class = 'cDropdown-toggle dropdown-toggle'and @type = 'button']
 promopop = //img[@alt='Close form']
-sizelist = //div[contains(@class,'dropdown-menu')]/button/span[@class='cDropdown-itemSubtitle']
+fittingsize = //div[contains(@class,'dropdown-menu')]/button
+sizenumber = //div[contains(@class,'dropdown-menu')]/button/span[@class='cDropdown-itemTitle number']
 imgcaption = //div[@class = 'carousel-inner' and @role = 'listbox']/div[@class = 'carousel-item active']/div[@class='caption']
 buttontitlevalues = //button[@class = 'cDropdown-item']/span[@class = 'cDropdown-itemTitle number']
 addtobag = //button[@class = 'cProductMain-add btn btn-primary btn--pdp' and @id = 'productMainAdd']
