new files added

--- a/src/test/resources/objectrepository/OR.properties
+++ b/src/test/resources/objectrepository/OR.properties
@@ -4,6 +4,11 @@ fittingsize = //div[contains(@class,'dropdown-menu')]/button
 sizenumber = //div[contains(@class,'dropdown-menu')]/button/span[@class='cDropdown-itemTitle number']
 imgcaption = //div[@class = 'carousel-inner' and @role = 'listbox']/div[@class = 'carousel-item active']/div[@class='caption']
 buttontitlevalues = //button[@class = 'cDropdown-item']/span[@class = 'cDropdown-itemTitle number']
-addtobag = //button[@class = 'cProductMain-add btn btn-primary btn--pdp' and @id = 'productMainAdd']
 sizechart = //label[@class = 'cProduct-sizeChart' and contains(text(), 'Size Chart')]
+disabledbutton = //button[@class = 'cVariant disabled selected']
+emailwhenavailable = //button[@id = 'productMainAdd']
+amethyst = //button[@data-text='Amethyst']
 
+limitedcolours = //div[@class='cSwatch cSwatch-limited']/descendant::button
+
+outofstockinfo = //div[@class='cProductMain-lowstock show']
