new files added

--- a/src/test/resources/objectrepository/OR.properties
+++ b/src/test/resources/objectrepository/OR.properties
@@ -6,9 +6,10 @@ imgcaption = //div[@class = 'carousel-inner' and @role = 'listbox']/div[@class =
 buttontitlevalues = //button[@class = 'cDropdown-item']/span[@class = 'cDropdown-itemTitle number']
 sizechart = //label[@class = 'cProduct-sizeChart' and contains(text(), 'Size Chart')]
 disabledbutton = //button[@class = 'cVariant disabled selected']
-emailwhenavailable = //button[@id = 'productMainAdd']
+
+additemtobag = //button[@id = 'productMainAdd']
+
 amethyst = //button[@data-text='Amethyst']
-
 limitedcolours = //div[@class='cSwatch cSwatch-limited']/descendant::button
-
-outofstockinfo = //div[@class='cProductMain-lowstock show']
+stockinfo = //div[@class='cProductMain-lowstock show']
+dataitem = //p[@class = 'cSideCart-yourBag']
