--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
 			<version>5.0.8</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+
 
 	</dependencies>
 	<build>
