--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,22 @@
 			<version>1.3.2</version>
 		</dependency>
 
+
+
+		<!-- https://mvnrepository.com/artifact/ru.yandex.qatools.ashot/ashot -->
+		<dependency>
+			<groupId>ru.yandex.qatools.ashot</groupId>
+			<artifactId>ashot</artifactId>
+			<version>1.5.4</version>
+		</dependency>
+
+
+ <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.5</version>
+    </dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
